Slight Alignment Fix

--- a/css/table.css
+++ b/css/table.css
@@ -24,7 +24,7 @@
 .main_table tr td input {
     outline: none;
     border: none;
-    width: 98%;
+    width: 100%;
     height: 100%;
     background: transparent;
 
